DevOCL/src/objects/OCLQS_Transaction_Error__c.object
<CustomObject>
    <description>Error Logging Objects
Build By Integration Team</description>
    <fields>
        <fullName>Date_Time_del__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Parent_Id__c</fullName>
        <label>Transaction Parent Id</label>
        <referenceTo>OCLQS_Transaction_Log__c</referenceTo>
        <relationshipName>Transaction_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction Error</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Transaction Error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Error</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>